keyword guideline changes

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -505,11 +505,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">sha2Val</td>
@@ -519,11 +533,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">drbgVal</td>
       <td class="left">The DRBG validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">methods</td>
@@ -533,11 +561,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">type</td>
       <td class="left">Type of method or algorithm supported, represented as an array of the following JSON values</td>
       <td class="left">value</td>
       <td class="left">See <a href="#supported_types">Section 2.1</a></td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">genPQ</td>
@@ -547,11 +589,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">genG</td>
       <td class="left">Genrate G method, one or both</td>
       <td class="left">array</td>
       <td class="left">Unverifiable, Canonical</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">lnInfo</td>
@@ -561,11 +617,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">ln</td>
       <td class="left">Length in bits of prime modulus p and the prime divisor</td>
       <td class="left">value</td>
       <td class="left">1024-224, 2048-224, 2048-256, 3072-256</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">sha</td>
@@ -622,14 +692,29 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">algorithm</td>
       <td class="left">DSA2</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testGroups</td>
@@ -661,10 +746,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">LN</td>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">ln</td>
       <td class="left">Length in bits of prime modulus p and the prime divisor as second item of array</td>
       <td class="left">array</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">sha</td>
@@ -673,16 +770,34 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">genPQ</td>
       <td class="left">Probable, Provable</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">genG</td>
       <td class="left">Unverifiable, Canonical</td>
       <td class="left">array</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tests</td>
@@ -714,10 +829,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">p</td>
       <td class="left">The prime modulus</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">q</td>
@@ -726,10 +853,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">g</td>
       <td class="left">The generator</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">r</td>
@@ -738,10 +877,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">s</td>
       <td class="left">The signature component S</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">y</td>
@@ -750,10 +901,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">number</td>
       <td class="left">Number of domain parameter sets to be generated</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">seed</td>
@@ -762,16 +925,34 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">counter</td>
       <td class="left">The counter output from the generation of p</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">n</td>
       <td class="left">The number of sets of X and Y values to generate</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">message</td>
@@ -801,9 +982,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testResults</td>
@@ -833,10 +1024,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">q</td>
       <td class="left">The prime divisor of P-1</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">g</td>
@@ -845,10 +1048,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">x</td>
       <td class="left">The private key component X</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">y</td>
@@ -857,16 +1072,34 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">seed</td>
       <td class="left">Seed used to generate P and Q</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">counter</td>
       <td class="left">The counter output from the generation of p</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">results</td>
@@ -913,9 +1146,9 @@
 			        "genPQ" : ["provable", "probable"],
 			        "genG" : ["unverifiable", "canonical"],
 			        "lnInfo" : [
-			                { "LN : 2048-224, 
+			                { "ln : 2048-224, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
-				        { "LN" : 2048-256, 
+				        { "ln" : 2048-256, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
 				       ]
                               },
