--- a/artifacts/acvp_sub_ecdsa.html
+++ b/artifacts/acvp_sub_ecdsa.html
@@ -509,11 +509,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">sha2Val</td>
@@ -523,11 +537,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">sha3Val</td>
       <td class="left">A third (optional) SHA validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">drbgVal</td>
@@ -537,11 +565,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">drbg2Val</td>
       <td class="left">A second (optional) DRBG validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">methods</td>
@@ -551,11 +593,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">type</td>
       <td class="left">Type of operation supported</td>
       <td class="left">array</td>
       <td class="left">See <a href="#supported_types">Section 2.1</a></td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">curves</td>
@@ -565,11 +621,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">sha</td>
       <td class="left">Array of SHA values used for a specific curve</td>
       <td class="left">array</td>
       <td class="left">See <a href="#supported_sha">Section 2.3</a></td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">options</td>
@@ -654,14 +724,29 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">algorithm</td>
       <td class="left">ECDSA2</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testGroups</td>
@@ -693,10 +778,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">curve</td>
       <td class="left">The curve type used for the test vectors. See <a href="#supported_curves">Section 2.2</a> for possible values</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">options</td>
@@ -705,10 +802,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">sha</td>
       <td class="left">SHA version used</td>
       <td class="left">array</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tests</td>
@@ -740,10 +849,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">qx</td>
       <td class="left">The public key curve point x</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">qy</td>
@@ -752,10 +873,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">r</td>
       <td class="left">The signature component R</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">s</td>
@@ -764,10 +897,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">number</td>
       <td class="left">Number of keypair sets to be generated</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">message</td>
@@ -797,9 +942,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testResults</td>
@@ -829,10 +984,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">qx</td>
       <td class="left">The public key curve point x</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">qy</td>
@@ -841,16 +1008,34 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">r</td>
       <td class="left">The signature component R</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">s</td>
       <td class="left">The signature component S</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">results</td>
