--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -505,11 +505,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">inByte</td>
       <td class="left">Implementation only hashes byte-oriented messages</td>
       <td class="left">value</td>
       <td class="left">yes, no</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">inEmpty</td>
@@ -519,6 +533,13 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">outByte</td>
       <td class="left">Implementation only outputs  byte-oriented messages</td>
       <td class="left">value</td>
@@ -526,11 +547,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">inLen</td>
       <td class="left">Minimum input length</td>
       <td class="left">value</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">outLen</td>
@@ -564,11 +599,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">aesVal</td>
       <td class="left">The AES validation number or implemented in same implementation(CMAC).</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">shaVal</td>
@@ -578,11 +627,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">tdesVal</td>
       <td class="left">The TDES validation number or implemented in same implementation(CMAC).</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">keyRange1</td>
@@ -592,11 +655,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">keyRange2</td>
       <td class="left">If IUT supports key sizes(KS) greater than Block size(BS), enter 2 distinct key sizes (in Bytes). If IUT only supports one KS greater than BS, enter the size in the array and do not pass keyrange1 or keyblock field.</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">keyBlock</td>
@@ -606,6 +683,13 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">macLen</td>
       <td class="left">The supported mac sizes in bytes. (range dependent on SHA size)</td>
       <td class="left">array</td>
@@ -613,11 +697,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">inEmpty</td>
       <td class="left">Implementation does not accept Null (zero-length) messages</td>
       <td class="left">value</td>
       <td class="left">yes, no</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">msgLen</td>
@@ -628,7 +726,7 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.4">Note: Some optional values are required depending on the algorithm.  For example, SHA-1 requires inbyte, inempty, inlen, and outlen.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<p id="rfc.section.2.p.4">Note: Some optional values are required depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <p id="rfc.section.2.p.5">macLen for CMAC contains an array of 3 values defined by these rules:</p>
 <p/>
 
@@ -700,14 +798,29 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">algorithm</td>
       <td class="left">The hash algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 2.1</a> and <a href="#supported_algs2">Section 2.2</a> for possible values.</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testGroups</td>
@@ -738,6 +851,12 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">tests</td>
       <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
       <td class="left">array</td>
@@ -764,6 +883,12 @@
       <td class="left">Length of MAC in bytes to generate</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tests</td>
@@ -795,16 +920,34 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">len</td>
       <td class="left">Length of the message or seed</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">msg</td>
       <td class="left">Value of the message or seed</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">md</td>
@@ -835,10 +978,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">type</td>
       <td class="left">CMAC type of test, generation or verification</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">keyLen</td>
@@ -847,10 +1002,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">key</td>
       <td class="left">Value of the key</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">key2</td>
@@ -859,16 +1026,34 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">key3</td>
       <td class="left">Value of the key</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">msg</td>
       <td class="left">Value of the message</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">mac</td>
@@ -898,9 +1083,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testResults</td>
