--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -503,11 +503,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">direction</td>
       <td class="left">The crypto operation direction</td>
       <td class="left">array</td>
       <td class="left">encrypt, decrypt</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">keyLen</td>
@@ -517,11 +531,25 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">ptLen</td>
       <td class="left">The supported plaintext lengths in bits</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">ivLen</td>
@@ -531,11 +559,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">ivGen</td>
       <td class="left">IV generation method for AEAD algorithms</td>
       <td class="left">value</td>
       <td class="left">internal, external</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">ivGenMode</td>
@@ -545,11 +587,25 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">aadLen</td>
       <td class="left">The supported AAD lengths in bits for AEAD algorithms</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tagLen</td>
@@ -608,9 +664,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">algorithm</td>
@@ -618,9 +684,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">direction</td>
       <td class="left">The encryption direction: encrypt or decrypt</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testGroups</td>
@@ -651,10 +727,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">ivLen</td>
       <td class="left">Length of IV in bits to use</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">ptLen</td>
@@ -663,16 +751,34 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">aadLen</td>
       <td class="left">Length of AAD in bits to use</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">tagLen</td>
       <td class="left">Length of AEAD tag in bits to use</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tests</td>
@@ -704,10 +810,22 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">key</td>
       <td class="left">Encryption key to use</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">iv</td>
@@ -716,10 +834,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">pt</td>
       <td class="left">Plaintext to use</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">ct</td>
@@ -728,10 +858,22 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">aad</td>
       <td class="left">AAD to use for AEAD algorithms</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">tag</td>
@@ -761,9 +903,19 @@
       <td class="left">value</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
     </tr>
     <tr>
       <td class="left">testResults</td>
